chore: re-add missing templ config
