# docs/swagger.json
@@ -4,28 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/health": {
-            "get": {
-                "description": "Returns the health status of the server.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Health"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/websites": {
             "get": {
                 "description": "Retrieves a list of all monitored websites.",
