# internal/app/app.go
@@ -3,9 +3,9 @@ package app
 import (
 	"context"
 	"fmt"
-	"log"
 	"net/http"
 	"os"
+	"time"
 
 	"hermit/api/controllers"
 	"hermit/api/middlewares"
@@ -15,21 +15,48 @@ import (
 	"hermit/internal/database"
 	"hermit/internal/repositories"
 
+	"github.com/coder/websocket"
 	"github.com/jmoiron/sqlx"
 	"github.com/labstack/echo/v4"
-	"github.com/swaggo/echo-swagger"
 	"go.uber.org/fx"
 	"go.uber.org/fx/fxevent"
 	"go.uber.org/zap"
 )
 
-// App holds all the dependencies for the application
 type App struct {
-	Echo *echo.Echo
-	DB   *sqlx.DB
+	Echo   *echo.Echo
+	DB     *sqlx.DB
+	Logger *zap.Logger
 }
 
-// NewLogger creates a new zap logger that is environment-aware.
+func (a *App) WebsocketHandler(c echo.Context) error {
+	w := c.Response().Writer
+	r := c.Request()
+	socket, err := websocket.Accept(w, r, nil)
+
+	if err != nil {
+		a.Logger.Error("could not open websocket", zap.Error(err))
+		_, _ = w.Write([]byte("could not open websocket"))
+		w.WriteHeader(http.StatusInternalServerError)
+		return nil
+	}
+
+	defer socket.Close(websocket.StatusGoingAway, "server closing websocket")
+
+	ctx := r.Context()
+	socketCtx := socket.CloseRead(ctx)
+
+	for {
+		payload := fmt.Sprintf("server timestamp: %d", time.Now().UnixNano())
+		err := socket.Write(socketCtx, websocket.MessageText, []byte(payload))
+		if err != nil {
+			break
+		}
+		time.Sleep(time.Second * 2)
+	}
+	return nil
+}
+
 func NewLogger() (*zap.Logger, error) {
 	if os.Getenv("APP_ENV") == "production" {
 		return zap.NewProduction()
@@ -37,38 +64,28 @@ func NewLogger() (*zap.Logger, error) {
 	return zap.NewDevelopment()
 }
 
-// NewFxApp creates the Fx application with all the dependencies
 func NewFxApp() *fx.App {
 	return fx.New(
 		fx.Provide(
-			// Provides the application configuration
 			config.NewConfig,
-
-			// Provides the zap logger
 			NewLogger,
 
-			// Provides the database clients
+			crawler.NewCrawler,
+
 			database.NewPostgresDB,
 			database.NewMinIOClient,
 			database.NewChromaDBClient,
 
-			// Provides the services
-			crawler.NewCrawler,
-
-			// Provides the repositories
 			repositories.NewWebsiteRepository,
 
-			// Provides the controllers
 			controllers.NewWebsiteController,
 
-			// Provides the Echo web server instance
 			func() *echo.Echo {
 				return echo.New()
 			},
 
-			// Provides the main App struct
-			func(e *echo.Echo, db *sqlx.DB) *App {
-				return &App{Echo: e, DB: db}
+			func(e *echo.Echo, db *sqlx.DB, log *zap.Logger) *App {
+				return &App{Echo: e, DB: db, Logger: log}
 			},
 		),
 		fx.WithLogger(func(log *zap.Logger) fxevent.Logger {
@@ -76,18 +93,19 @@ func NewFxApp() *fx.App {
 		}),
 		fx.Invoke(middlewares.SetupMiddlewares),
 		fx.Invoke(RegisterHooks),
-		fx.Invoke(SetupRoutes),
+		fx.Invoke(func(e *echo.Echo, app *App, wc *controllers.WebsiteController) {
+			routes.SetupRoutes(e, app, wc)
+		}),
 	)
 }
 
-// RegisterHooks registers the application lifecycle hooks with Fx
 func RegisterHooks(lc fx.Lifecycle, app *App, cfg *config.Config) {
 	lc.Append(fx.Hook{
 		OnStart: func(ctx context.Context) error {
 			go func() {
 				address := fmt.Sprintf(":%s", cfg.Port)
 				if err := app.Echo.Start(address); err != nil && err != http.ErrServerClosed {
-					log.Fatalf("Error starting server: %v", err)
+					app.Logger.Fatal("Error starting server", zap.Error(err))
 				}
 			}()
 			return nil
@@ -96,18 +114,4 @@ func RegisterHooks(lc fx.Lifecycle, app *App, cfg *config.Config) {
 			return app.Echo.Shutdown(ctx)
 		},
 	})
-}
-
-// SetupRoutes registers all the application routes.
-// @description  Returns the health status of the server.
-// @Tags         Health
-// @Produce      json
-// @Success      200  {object}  map[string]string
-// @Router       /health [get]
-func SetupRoutes(e *echo.Echo, wc *controllers.WebsiteController) {
-	e.GET("/api/health", func(c echo.Context) error {
-		return c.JSON(http.StatusOK, map[string]string{"status": "ok"})
-	})
-	e.GET("/api/swagger/*", echoSwagger.WrapHandler)
-	routes.SetupWebsiteRoutes(e, wc)
 }
